--- a/style.css
+++ b/style.css
@@ -1,74 +1,63 @@
 body {
-    color: white;
-    background: black;
+    background: linear-gradient(135deg, #00BFFF, #800080, #FF69B4);
+    color: white; 
+    font-family: 'Merriweather', serif; 
     margin: 7px;
+    font-size: 16px; 
+    line-height: 1.5; 
+}
+
+h1, h2 {
+    color: white; 
+}
+    
+
+h1, h2, h3 {
+    font-family: 'Merriweather', serif; 
+    font-weight: 700; 
+}
+
+p {
+    color: rgba(255, 255, 255, 0.9); 
 }
 
 header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: black;
 }
 
 section {
-    background: black;
+    background: linear-gradient(135deg, #00BFFF, #800080, #FF69B4);
     color: white;
     border-bottom: solid 2px rgb(24, 122, 228);
-    padding-bottom: 40px; 
-    padding-top: 40px; 
+    padding-bottom: 80px;
+    padding-top: 80px;
     justify-content: center;
 }
 
 img {
-    height: 250px;
-    display: block; 
-    margin: 0 auto; 
-    transition: transform 0.3s ease;
+    height: 200px;
 }
 
-img:hover {
-    transform: scale(1.1);
-}
-
-.categoria-curtas-Romance, {
+.categoria-curtas-de-Romance {
     display: flex;
-    flex-direction: column; 
     overflow-x: auto;
-    gap: 10px; 
-    border-bottom: solid 1px rgb(24, 122, 228); 
+    gap: 20px;
+    border-bottom: solid 1px rgb(24, 122, 228);
 }
 
-.categoria-curtas-emoção, {
+.categoria-curtas-drama {
     display: flex;
-    flex-direction: column; 
     overflow-x: auto;
-    gap: 10px; 
-    border-bottom: solid 1px rgb(24, 122, 228); 
+    gap: 40xp;
+    border-bottom: solid 1px rgb(24, 122, 228);
 }
 
-.Categoria-curta-Animação {
+.Categoria-curta-Fantasia-Animação {
     display: flex;
-    flex-direction: column; 
     overflow-x: auto;
-    gap: 10px; 
-    border-bottom: solid 1px rgb(24, 122, 228); 
-}
-
-.categoria-curtas-Romance {
-    text-align: center; 
-    color: white; 
-    text-decoration: none; 
-}
-
-.categoria-curtas-emoção {
-    text-align: center; 
-    color: white; 
-    text-decoration: none; 
-}
-
-.Categoria-curta-Animação a {
-    text-align: center; 
-    color: white; 
-    text-decoration: none; 
+    gap: 30xp;
+    border-bottom: solid 1px rgb(24, 122, 228);
 }
